--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                 </p>
                 <!--la propiedad expand=block hace que se expanda el boton a lo largo de la pag o div -->
                 <!--<ion-buttons start>-->
-                <ion-button1 class="ion-buttonbotoncalcular" expand="block" shape="round" onclick="agregarATicket()">Calcular</ion-button1>
-                <ion-button2 expand="block" shape="round" onclick="presentarAlerta()">Calcular 2</ion-button2>
+                <ion-button class="ion-buttonbotoncalcular" expand="block" shape="round" onclick="agregarATicket()">Calcular</ion-button>
+                <br>
+                <ion-button expand="block" shape="round" onclick="presentarAlerta()">Calcular 2</ion-button>
                 <!--</ion-buttons>-->
             
             </div>
